fix:Reduce gap between compoents in homepage

--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -340,7 +340,7 @@
   gap: 2.5rem;
 
   width: 100%;
-  min-height: 120vh;
+  min-height: 50vh;
 
   padding: 5rem 1rem;
 
@@ -558,6 +558,10 @@
 }
 
 @media screen and (min-width: 840px) {
+  .home-page > .featured-properities {
+    min-height: 50vh;
+  }
+
   .featured-properities > .property-preview-container {
     display: flex;
     flex-direction: row;
